Fix: Yellow live banner toop margin header for mobile, spacing

--- a/src/components/AnnouncementBar/AnnouncementBar.scss
+++ b/src/components/AnnouncementBar/AnnouncementBar.scss
@@ -25,7 +25,7 @@
 
 @media (max-width: 767px) {
   .AnnouncementBarContainer {
-    margin-top: 9.1vw;
+    margin-top: 7.4vw;
     height: calc(52px + 1vh);
     position: relative;
   }
